--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -4,14 +4,14 @@
 # 
 # Translators:
 # Jan Štourač <wormsik666@gmail.com>, 2014-2015
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2017
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-01-21 17:40+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2396,7 +2396,7 @@ msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/samba/docs/man/man
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Další podrobnosti naleznete v <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>manuálové stránce</a>."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Zvolte způsob kompletního smazání zařízení nebo celou akci zrušte kliknutím na „Zrušit“."
@@ -3498,14 +3498,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Tato kolonka by měla obsahovat číslice, oddělené znaky <,> (čárka) nebo <;> (středník)"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Tato kolonka by měla obsahovat pouze předvolby oddělované znakem <,> (čárka)"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Tato kolonka by měla obsahovat pouze čísla portů (0 - 65535), oddělená znaky <,> (čárka) nebo <;> (středník)"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Tato kolonka by měla obsahovat pouze řetězce oddělované znakem <,> (čárka)"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Tato kolonka by měla obsahovat pouze řetězce znaků, oddělených znaky <,> (čárka) nebo <;> (středník)"
