--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -5,15 +5,15 @@
 # Translators:
 # jmcainzos <jmcainzos@vodafone.es>, 2013
 # jmcainzos <jmcainzos@vodafone.es>, 2012
-# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2017
+# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2018
 # Volker <votdev@gmx.de>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-01-21 13:50+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2398,7 +2398,7 @@ msgstr "Por favor vea: <a href='http://www.samba.org/samba/docs/man/manpages-3/s
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Por Favor revise la página <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>del manual </a> para más detalles."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Por favor elija el metodo para borrar el dispositivo o pulse 'Cancelar' para salir."
@@ -3500,14 +3500,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Este campo debe contener solo números separados por <,> o <;>"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Este campo debe contener solo cadenas separadas por <,>"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Este campo debe contener solo puertos (0-65535) separados por <,> o <;>"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Este campo debe contener solo cadenas separadas por <,>"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Este campo debe contener solo cadenas separadas por <,> o <;>"
