--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-01-21 22:13+0000\n"
+"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2399,7 +2399,7 @@ msgstr "Kérlek tekintsd meg a <a href='http://www.samba.org/samba/docs/man/manp
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "További részletek a <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>kézikönyvben</a>."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Válaszd ki a módszert a meghajtó törlésére, vagy a 'Mégsem'-et a megszakításhoz."
@@ -3501,14 +3501,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Ez a mező csak <,> vagy <;> -vel elválasztott számokat tartalmazhat"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Ennek a mezőnek csak beállításokat szabad tartalmaznia „<,>” jelekkel elválasztva."
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Ennek a mezőnek csak portokat szabad tartalmaznia (0 - 65535) <,> vagy <;>-vel elválasztva."
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Ennek a mezőnek csak szöveget szabad tartalmaznia „<,>” jelekkel elválasztva."
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Ennek a mezőnek csak szöveget szabad tartalmaznia <,> vagy <;>-vel elválasztva."
