--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the openmediavault package.
 # 
 # Translators:
-# songming <by@songming.me>, 2013-2017
+# songming <by@songming.me>, 2013-2018
 # Wei Ding <dyw.net@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-01-21 13:44+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2396,7 +2396,7 @@ msgstr "详情请看 <a href='http://www.samba.org/samba/docs/man/manpages-3/smb
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "详情请看 <a href='https://man.openbsd.org/sshd_config.5' target='_blank'> 手册 </a>。"
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "请选择擦除设备的方式或者选择“取消”中止。"
@@ -3498,14 +3498,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "此处只能包含以 <,> 或 <;> 分割的数字"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "此处只能包含以 <,> 分割的参数"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "此处只能包含以 <,> 或 <;> 分割的端口号(0 - 65535)"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "此处只能包含以 <,> 分割的字符串"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "此处只能包含以 <,> 或 <;> 分割的字符串"
