--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.18-1) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Jan 2018 17:34:27 +0100
+
 openmediavault (4.0.17-1) stable; urgency=low
 
   * Update locales.
