Fix WebUI issue in Firefox browser. See
* https://bugtracker.openmediavault.org/view.php?id=1830
* https://www.sencha.com/forum/showthread.php?336762-Examples-don-t-work-in-Firefox-52-touchscreen&p=1174857&viewfull=1#post1174857.

Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (4.0.18-1) stable; urgency=low
 
   * Mantis 0001882: Add 'source-directory interfaces.d' to
     /etc/network/interfaces to include additional interface stanzas.
+  * Fix WebUI issue in Firefox browser.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Jan 2018 17:34:27 +0100
 
