--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,7 @@
 openmediavault (3.0.97) stable; urgency=low
 
+  * Mantis 0000196: Switch the NFS shares default option from secure to
+    insecure because NFS is running on port 2049 by default.
   * Mantis 0001883: Fix bug in omv-firstaid IPv6 prefix length validation.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 06 Jan 2018 18:54:45 +0100
