Add 'Clear web control panel cache' option to omv-firstaid.
(cherry picked from commit 177c506a1c73b83379a1eec5d4f6506d40aa9381)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.97) stable; urgency=low
 
+  * Add 'Clear web control panel cache' option to omv-firstaid.
   * Mantis 0000196: Switch the NFS shares default option from secure to
     insecure because NFS is running on port 2049 by default.
   * Mantis 0001883: Fix bug in omv-firstaid IPv6 prefix length validation.
