--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:54+0000\n"
+"PO-Revision-Date: 2018-01-24 08:19+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2404,7 +2404,7 @@ msgstr "Bitte die <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.co
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Bitte die <a href='https://man.openbsd.org/sshd_config.5' target='_blank'></a>Hilfeseiten</a> für weitere Details lesen."
+msgstr "Bitte die <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>Hilfeseiten</a> für weitere Details lesen."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Bitte wählen Sie die Methode um das Laufwerk zu löschen oder 'Abbrechen' um den Vorgang abzubrechen."
