--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault package.
 # 
 # Translators:
-# Serhat SUT <serhat.sut@gmail.com>, 2012-2017
+# Serhat SUT <serhat.sut@gmail.com>, 2012-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-01-24 17:56+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2395,7 +2395,7 @@ msgstr "Daha fazla bilgi için lütfen <a href='http://www.samba.org/ftp/rsync/r
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Daha fazla bilgi için lütfen <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>manual page</a> adresini ziyaret ediniz."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Lütfen aygıtı silmek için bir metod seçiniz ya da iptal etmek için \"İptal\" tuşuna basınız."
@@ -3497,14 +3497,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Bu alan sadece <,> veya <;> ile ayrılmış rakam içerebilir"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Bu alan sadece <,> ile ayrılmış seçenekleri içerebilir."
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Bu alan sadece <,> veya <;> ile ayrılmış port (0 - 65535) numarası içerebilir"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Bu alan sadece <,> ile ayrılmış değerleri içerebilir."
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Bu alan sadece <,> veya <;> ile ayrılmış değer içerebilir"
