--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault package.
 # 
 # Translators:
-# Toshihiro Kan <kansuke4649@gmail.com>, 2014-2017
+# Toshihiro Kan <kansuke4649@gmail.com>, 2014-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-01-23 02:22+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2395,7 +2395,7 @@ msgstr "詳細については <a href='http://www.samba.org/samba/docs/man/manpa
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "詳細については <a href='https://man.openbsd.org/sshd_config.5' target='_blank'> マニュアルページ </a> を確認してください。"
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "デバイスをワイプする方法を選択してください。中止する場合は'キャンセル'を選択してください。"
@@ -3497,14 +3497,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "このフィールドは、<,>または<;>で区切られた数字である必要があります"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "このフィールドには<,>で分割されたオプションのみを入力します"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "このフィールドは、<,>または<;>で区切られたポート(0 - 65535)である必要があります"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "このフィールドには<,>で分割された文字列のみを入力します"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "このフィールドは、<,>または<;>で区切られた文字列である必要があります"
