--- a/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
@@ -4,14 +4,14 @@
 # 
 # Translators:
 # Henrik Sandström <inactive+sandstroem@transifex.com>, 2012
-# Jonatan Nyberg, 2017
+# Jonatan Nyberg, 2017-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-01-25 04:44+0000\n"
+"Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2396,7 +2396,7 @@ msgstr "Kontrollera <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Kontrollera <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>manualsidan</a> för mer detaljer."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Välj en metod för att radera enheten eller välj 'Avbryt' "
@@ -3498,14 +3498,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Detta fält bör endast innehålla siffror separerade med <,> eller <;>"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Detta fält bör bara innehålla alternativ åtskilda av <,>"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Detta fält bör endast innehålla portar (0 - 65535) som är separerade av <,> eller <;>"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Detta fält bör bara innehålla strängar åtskilda av <,>"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Detta fält bör endast innehålla strängar åtskilda av <,> eller <;>"
