Name the systemd unit correctly.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.19-1) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 11 Feb 2018 19:37:56 +0100
+
 openmediavault (4.0.18-1) stable; urgency=low
 
   * Mantis 0001882: Add 'source-directory interfaces.d' to
