--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.20-1) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 11 Feb 2018 19:54:12 +0100
+
 openmediavault (4.0.19-1) stable; urgency=low
 
   * Fix install problem of openmediavault-issue systemd unit.
