--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (4.0.20-1) stable; urgency=low
 
-  *
+  * Replace ifquery command in 'omv-mkconf issue' script.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 11 Feb 2018 19:54:12 +0100
 
