Set default value.
(cherry picked from commit c03e19f52d3ca6318915850a08e7e788cf41bcb1)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.98) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Feb 2018 12:19:32 +0100
+
 openmediavault (3.0.97) stable; urgency=low
 
   * Add 'Clear web control panel cache' option to omv-firstaid.
