--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,7 +1,7 @@
 openmediavault (4.0.20-1) stable; urgency=low
 
   * Replace ifquery command in 'omv-mkconf issue' script.
-  * Fix handling of file systems labels with whitespaces.
+  * Fix handling of file system labels containing whitespaces.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 11 Feb 2018 19:54:12 +0100
 
