* Increase package version to 4.1.0 according to semantic versioning (https://semver.org/). * Refactor and cleanup many things in the PHP API. * Add SCSI generic backend (experimental to support such devices in the S.M.A.R.T. page) * Enhance API docs. * Rename many PHP interfaces related to the storage backend from IXxxYyyZzz to XxxYyyZzzInterface according to PSR (PHP Standards Recommendations), see https://www.php-fig.org/psr. All others will be renamed in OMV5 because this would be too much work for existing OMV4 plugins right now. * Rename \OMV\Debugable to \OMV\DebugTrait.
Signed-off-by: Volker Theile votdev@gmx.de

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,7 +1,10 @@
-openmediavault (4.0.20-1) stable; urgency=low
+openmediavault (4.1.0-1) stable; urgency=low
 
   * Replace ifquery command in 'omv-mkconf issue' script.
   * Fix handling of file system labels containing whitespaces.
+  * Refactored PHP API.
+  * Rename all PHP interfaces from IXxxYyyZzz to XxxYyyZzzInterface according
+    to PSR (PHP Standards Recommendations), see https://www.php-fig.org/psr.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 11 Feb 2018 19:54:12 +0100
 
