--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (4.0.4-1) stable; urgency=low
+
+  * Adapt to new API.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 23 Feb 2018 17:53:59 +0100
+
 openmediavault-lvm2 (4.0.3-1) stable; urgency=low
 
   * Update locales.
