Fix locking issue in SMB recycle bin cleanup and iptables scripts.
(cherry picked from commit d903f254c72e7605362b5f1395e89e674b11eb61)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.98) stable; urgency=low
 
-  *
+  * Fix locking issue in SMB recycle bin cleanup and iptables scripts.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Feb 2018 12:19:32 +0100
 
