--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 13:50+0000\n"
+"PO-Revision-Date: 2018-02-14 07:51+0000\n"
 "Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
@@ -195,7 +195,7 @@ msgid "Access Right Management"
 msgstr "Permisos"
 
 msgid "Access Rights Management"
-msgstr "Administración de permisos de acceso"
+msgstr "Permisos de acceso"
 
 msgid "Access mode"
 msgstr "Modo de acceso"
