--- a/deb/openmediavault-tftp/debian/changelog
+++ b/deb/openmediavault-tftp/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-tftp (4.0.4-1) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 03 Mar 2018 07:24:34 +0100
+
 openmediavault-tftp (4.0.3-1) stable; urgency=low
 
   * Remove configuration in database when package is purged.
