--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (4.1.0-1) stable; urgency=low
 
+  * Update locales.
   * Replace ifquery command in 'omv-mkconf issue' script.
   * Increase package version to 4.1.0 according to semantic versioning
     (https://semver.org/).
