--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (4.0.7-1) stable; urgency=low
+
+  * Fix monit configuration.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 Mar 2018 07:15:28 +0100
+
 openmediavault-shairport (4.0.6-1) stable; urgency=low
 
   * Fix postrm script.
