--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/hu_HU/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/hu_HU/openmediavault-diskstats.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Gábor Sári <sari.gabor@gmail.com>, 2017\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>, 2017\n"
 "Language-Team: Hungarian (Hungary) (https://www.transifex.com/votdev/teams/14254/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
