--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
-# Gábor Sári <sari.gabor@gmail.com>, 2017
+# Sári Gábor <sari.gabor@gmail.com>, 2017
 # Gyuris Gellért <bubu@ujevangelizacio.hu>, 2018
 # Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017
 # Grawens <szabolcs.szanyi@gmail.com>, 2014-2017
