--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/hu_HU/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/hu_HU/openmediavault-lvm2.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
-# Gábor Sári <sari.gabor@gmail.com>, 2017
+# Sári Gábor <sari.gabor@gmail.com>, 2017
 # mersaint <mersaint@gmail.com>, 2012
 # Grawens <szabolcs.szanyi@gmail.com>, 2014-2015,2017
 msgid ""
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
 "PO-Revision-Date: 2017-09-19 12:24+0000\n"
-"Last-Translator: Gábor Sári <sari.gabor@gmail.com>\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
