--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/hu_HU/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/hu_HU/openmediavault-shairport.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
-# Gábor Sári <sari.gabor@gmail.com>, 2017
+# Sári Gábor <sari.gabor@gmail.com>, 2017
 # Grawens <szabolcs.szanyi@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
 "PO-Revision-Date: 2017-09-20 06:11+0000\n"
-"Last-Translator: Gábor Sári <sari.gabor@gmail.com>\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
