--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.2-1) stable; urgency=low
+
+  * Various bugfixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 20 Mar 2018 20:02:18 +0100
+
 openmediavault (4.1.1-1) stable; urgency=low
 
   * Update locales.
