Fix display issue in shutdown/404 page.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (4.1.2-1) stable; urgency=low
 
   * Various bugfixes.
+  * Fix display issue in shutdown page.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 20 Mar 2018 20:02:18 +0100
 
