--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.3-1) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Mar 2018 22:13:39 +0200
+
 openmediavault (4.1.2-1) stable; urgency=low
 
   * Various bugfixes.
