--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (4.1.3-1) stable; urgency=low
 
+  * Various improvements.
   * Improve OMV.data.proxy.RpcBg implementation to fix race condition.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Mar 2018 22:13:39 +0200
