--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.4-1) stable; urgency=low
+
+  * Rename class \OMV\Rpc\BgStatusFile to \OMV\Rpc\BgStatus.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 31 Mar 2018 09:42:59 +0200
+
 openmediavault (4.1.3-1) stable; urgency=low
 
   * Various improvements.
