--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.5-1) stable; urgency=low
+
+  * Update Material Design icons to version 2.2.43.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 10 Apr 2018 20:30:26 +0200
+
 openmediavault (4.1.4-1) stable; urgency=low
 
   * Rename class \OMV\Rpc\BgStatusFile to \OMV\Rpc\BgStatus.
